<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:float="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contain_signIn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8C8C8C"
    android:gravity="center"
    tools:context="kmitl.tiwipabmin.eatallday.com.tiwipabmin.eatallday.controller.activity.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/border_shadow_style"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <TextView
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:gravity="center"
                android:text="@string/sign_in"
                android:textSize="28sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_information"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="10dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/ic_information_64dp"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="@drawable/ic_email"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>

            <com.wrapp.floatlabelededittext.FloatLabeledEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                float:fletPadding="2dp">

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress" />

            </com.wrapp.floatlabelededittext.FloatLabeledEditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="@drawable/ic_password"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>

            <com.wrapp.floatlabelededittext.FloatLabeledEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                float:fletPadding="2dp">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword" />

            </com.wrapp.floatlabelededittext.FloatLabeledEditText>

        </LinearLayout>

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/sign_in"
            android:textAppearance="@style/TextAppearance.AppCompat" />
        <!--fbutton:buttonColor="#8C8C8C"-->
        <!--fbutton:cornerRadius="2dp"-->
        <!--fbutton:shadowColor="#6B6B6B"-->
        <!--fbutton:shadowEnabled="true"-->
        <!--fbutton:shadowHeight="1dp" />-->

        <com.facebook.login.widget.LoginButton
            android:layout_marginTop="8dp"
            android:id="@+id/login_button"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textSize="15sp" />

    </LinearLayout>


</LinearLayout>
